iniciando estilo na search bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,3 +38,9 @@ nav{
     height: 13.5rem;
     border: solid;
 }
+
+.searchBar{
+    width: 40rem;
+    height: 2.5rem;
+    border-radius: 1rem;
+}
