--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="conteiner">
         <nav class="itens">
-            <input type="search" name="search" id="searchArea">
+            <input type="search" name="search" id="searchArea" class="searchBar" placeholder="Previsão do Tempo para...">
             <br>
             <div id="Location">TEMPO AQUI</div>
         </nav>
