--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,10 @@
 <body>
     <div id="conteiner">
         <nav class="itens">
-            <input type="search" name="search" id="searchArea" class="searchBar" placeholder="Previsão do Tempo para...">
+            <div id="searchArea">
+                <input type="search" name="searchBar" id="searchBar" class="searchBar" placeholder="Previsão do Tempo para...">
+                <img width="35" height="35" src="..\static\images\icons8-search-50.png" alt="search--v1"/>
+            </div>
             <br>
             <div id="Location">TEMPO AQUI</div>
         </nav>
