--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,14 @@
     <div id="conteiner">
         <nav class="itens">
             <div id="searchArea">
-                <input type="search" name="searchBar" id="searchBar" class="searchBar" placeholder="Previsão do Tempo para...">
+                <input type="search" name="searchBar" id="searchBar" class="searchBar" placeholder="Previsão do tempo para...">
                 <img width="35" height="35" src="..\static\images\icons8-search-50.png" alt="search--v1"/>
             </div>
             <br>
             <div id="Location">TEMPO AQUI</div>
         </nav>
         <section class="itens" id="item-1">
-            <div id="wheaterNow">TEMPO AGORA</div>
+            <div id="wheaterNow">Time Now, the best world's fonts.</div>
             <div id="timeForecast">PREVISAO CURTO PRAZO</div>
         </section>
         <section class="itens" id="item-2">
