--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,16 @@
                 <img width="35" height="35" src="..\static\images\icons8-search-50.png" alt="search--v1"/>
             </div>
             <br>
-            <div id="Location">TEMPO AQUI</div>
+            <div id="Location"  class="font-title">Neste momento em Someplaceland.</div>
         </nav>
         <section class="itens" id="item-1">
-            <div id="wheaterNow">Time Now, the best world's fonts.</div>
+            <div id="wheaterNow"></div>
             <div id="timeForecast">PREVISAO CURTO PRAZO</div>
         </section>
         <section class="itens" id="item-2">
             <div id="weekForecast">PREVISAO LONGO PRAZO</div>
         </section>
     </div>
+    <script src="..\static\js\index.js"></script>
 </body>
 </html>
