--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body{
-    background-color: rgb(6, 114, 238);
+    background-color:#004aad ;
+}
+
+#menu{
+    position: fixed;
+    top: 0;
+    right: -250px;
+    width: 250px;
+    height: 100%;
+    background-color: #3b88c3;
+    padding-top: 60px;
+    transition: 0.5s;
+    font-family: 'Pathway Gothic One', sans-serif;
+}
+
+#menu a{
+    padding: 15px;
+    text-decoration: none;
+    font-size: 18px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+#menu a:hover{
+    background-color: #3d5177;
+}
+
+#menu .close-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    cursor: pointer;
+    color: white;
+}
+
+  #menu .logout{
+    position: absolute;
+    bottom: 60px;
+    width: 100%;
+    text-align: center;   
+}
+
+#menu-icon{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    font-size: 30px;
+    cursor: pointer;
+    color: #ffffff;
+    z-index: 2; 
 }
 
 nav{
@@ -26,12 +77,6 @@ nav{
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-around;
-    align-items: center;
-}
-
-#item-2{
-    display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -65,16 +110,40 @@ nav{
     font-weight: bold;
     letter-spacing: -1px;
     font-kerning: none;
-}
-
-#wheaterNow{
-    background-color: whitesmoke;
-    height: 10rem;
-    width: 30rem;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+    transition-property: all;
+    transition-duration: 5000ms;
 }
 
 #wheaterNow > div{
     display: flex;
     justify-content: space-between;
-} 
+    align-items: center;
+    border-radius: 10px;
+    color: white;
+    height: 11rem;
+    width: 35rem;
+    background-color: rgb(124, 124, 124);
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 
+#wheaterNow > div > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto', sans-serif;
+    opacity: 1;
+    transition: opacity 1s;
+}
+
+.values{
+    font-size: 3rem;
+    padding-bottom: 12px;
+}
+
+.temp, .wind{
+    margin-bottom: 7px;
+}
