perf(menu) nova implementacao do menu na aplicacao

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,7 @@
         Wheater Forecast
     {% endblock %}
     {% block content %}
-    <div id="menu">
-        <div class="close-btn" onclick="toggleMenu()">×</div>
-        <a href="#"><i class="fa-solid fa-user" style="color: #ffffff;"></i>ㅤPerfil</a>
-        <a href="#"><i class="fa-solid fa-clock-rotate-left"></i>ㅤHistórico</a>
-        <a href="#"><i class="fa-solid fa-map-location-dot" style="color: #ffffff;"></i>ㅤMapa</a>
-        <div class="logout">
-          <a href="#"><i class="fa-solid fa-right-from-bracket" style="color: #ffffff;"></i>ㅤLogout</a>
-        </div>
-      </div>
-      <div id="menu-icon" onclick="toggleMenu()">☰</div>
+    <div id="menu"></div>
     <div id="conteiner">
         <nav class="itens">
             <div id="searchArea">
