feat(password) implementecao tela redefinicao de senha

--- a/templates/tela-login.html
+++ b/templates/tela-login.html
@@ -146,7 +146,7 @@
     <label for="newPassword" class="label-text left-align">Senha</label>
     <input type="text" id="newPassword" name="newPassword" onfocus="clearExampleText(this)" value="Digite sua senha" class="example-text">
 
-    <p class="forgot-password">Recuperar senha</p>
+    <a href="/redefinir"><p class="forgot-password">Recuperar senha</p></a>
     
     <div class="button-container">
         <a href="/home">
@@ -154,8 +154,7 @@
             <span class="button-text">ENTRAR</span>
           </button>
         </a>
-        <button type="button" class="cadastrar-button" onclick="clearFields()">CADASTRE-SE GRÁTIS</button>
-      </div>
+    </div>
   </div>
 {% endblock %}
 <script>
