--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div id="conteiner">
         <nav class="itens">
             <div id="searchArea">
-                <form action="/" method="post">
+                <form action="/home" method="post">
                     <input type="search" name="searchBar" id="searchBar" class="searchBar" placeholder="Previsão do tempo para...">
                 </form>
                 <img width="35" height="35" src="{{ url_for('static', filename='images/icons8-search-50.png')}}" alt="search--v1"/>
