style(layout) pequenas mudancas nas divs

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
   {% block title %}
-      Wheater Forecast
+      Perfil
   {% endblock %}
   {% block content %}
   <style>
