--- a/templates/redefinirSenha.html
+++ b/templates/redefinirSenha.html
@@ -1,4 +1,8 @@
-
+{% extends 'base.html'%}
+  {% block title %}
+      Redefinição de Senha
+  {% endblock %}
+  {% block content %}
   <style>
     body {
       margin: 0;
@@ -138,6 +142,10 @@
       z-index: 2;
     }
 
+    h1{
+      margin-bottom: 3rem;
+    }
+
   </style>
 </head>
 <body>
@@ -179,5 +187,5 @@
       }
     }
   </script>
-</body>
-</html>
+{% endblock %}
+
